--- a/base.1.5.css
+++ b/base.1.5.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'TT Lakes';
-    src: url("../Font/TTLakes/TTLakes-Regular.woff") format('woff');
+    src: url("Font/TTLakes/TTLakes-Regular.woff") format('woff');
     font-weight: 200;
     font-style: normal;
 }
