--- a/base.1.5.css
+++ b/base.1.5.css
@@ -151,6 +151,9 @@ body{
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
     }
+    .repair__button-flex{
+        justify-content: center;
+    }
     .extra{
         display: none;
     }
