--- a/base.1.5.css
+++ b/base.1.5.css
@@ -136,9 +136,9 @@ body{
     }
     .repair__button-flex{
         display: flex;
-        justify-content: end;
+        justify-content: center;
         gap: 5px;
-        padding-top: 10px;
+        padding: 10px 0 0 10px;
     }
 
 }
@@ -150,9 +150,6 @@ body{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
-    }
-    .repair__button-flex{
-        justify-content: center;
     }
     .extra{
         display: none;
