--- a/base.1.5.css
+++ b/base.1.5.css
@@ -138,7 +138,8 @@ body{
         display: flex;
         justify-content: center;
         gap: 5px;
-        padding: 10px 0 0 10px;
+        padding-top: 10px;
+        padding-left: 10px;
     }
 
 }
